tests/baselines/reference/MemberFunctionDeclaration2_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration2_es6.ts(2,11): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration2_es6.ts (1 errors) ====
    class C {
       public * foo() { }
              ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
    }